tests/negative/typecheck/addr_cast_mutability.orng
// addr_cast_mutability.orng:7:33: error: cannot cast away immutability
//     let y: &mut Int = @addr_cast(&x)
//                                ^
// 
fn main() -> Int {
    let x = 4
    let y: &mut Int = @addr_cast(&x)
    y^
}
